# ga_isochrones

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
configs/envs/: example
docs/: dartmouth.md  isochrones.md  mist.md
nb/: isochrones.ipynb
nb/examples/: interp.ipynb
python/pfs/ga/isochrones/: __init__.py  constants.py  dartmouth.py  interpnd.py  isogrid.py  mist.py
python/pfs/ga/isochrones/io/: __init__.py  dartmouthreader.py  isogridreader.py  mistreader.py
python/pfs/ga/isochrones/scripts/: __init__.py  import_.py  script.py  synthmag.py
python/pfs/ga/isochrones/tensorlib/: __init__.py  _numpy.py  _pytorch.py  _tensorflow.py  config.py
python/pfs/ga/isochrones/tensorlib/random/: __init__.py  _random_numpy.py  _random_pytorch.py  _random_tensorflow.py
python/pfs/ga/isochrones/util/: astro.py  data.py  notebookrunner.py
recipe/: meta.yaml
test/pfs/ga/isochrones/: test_base.py  test_dartmouth.py  test_interpnd.py  test_isogrid.py
test/pfs/ga/isochrones/io/: test_dartmouthreader.py  test_mistreader.py
test/pfs/ga/isochrones/tensorlib/: tensorlibtestbase.py  test_numpy.py  test_pytorch.py  test_tensorflow.py  testbase.py
