[metadata]
name = pfs-isochrones
version = 0.1.3
license = NO LICENSE, DO NOT DISTRIBUTE
description = A isochrone interpolation library for GPUs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    astronomy
url = https://github.com/Subaru-PFS-GA/ga_isochrones
author = Laszlo Dobos
author_email = dobos@jhu.edu
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

license_files =
    README.md

[options]
package_dir =
    =python
packages = find_namespace:
include_package_data = false
zip_safe = false
setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.6.*
install_requires =
    tqdm >=4.42.1
    numpy >=1.18.5
    pandas >=1.0.1
    h5py >=2.10.0
    matplotlib >=3.1.3
    scipy >=1.5.3
    tensorflow >=2.4


[options.packages.find]
where = python
exclude =
    test
    pfs
    pfs/ga


[options.entry_points]
console_scripts =
    pfsiso-synthmag = pfs.ga.isochrones.scripts.synthmag:main
    pfsiso-import = pfs.ga.isochrones.scripts.import_:main
